# SolarTermsWallpaper

./: .gitignore  CMakeLists.txt  NSISLicense.txt  README.md  installer.nsi  kill.bat  main.cpp
wallpapers/: CONFIG
